--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -178,7 +178,6 @@ header .brand-logo .logo-img {
   height: 45px;
   vertical-align: middle;
   padding-bottom: 6px;
-  border-radius: 50%;
 }
 header .brand-logo .logo-span {
   font-size: 2rem;
@@ -323,17 +322,18 @@ header .go-back i {
   z-index: 2;
 }
 .bg-cover .title {
-  font-size: 4rem;
+  font-size: 2.2rem;
   font-weight: 700;
   line-height: 1.85em;
   margin-bottom: 20px;
   position: relative;
 }
 .bg-cover .description {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 300;
   line-height: 1.4em;
   color: #eee;
+  letter-spacing: 2px;
 }
 .bg-cover .post-title {
   font-size: 1.9rem;
@@ -458,7 +458,7 @@ header .go-back i {
   padding-top: 30px;
 }
 .index-card .card .card-content {
-  padding: 20px 40px;
+  padding: 10px 20px;
 }
 @media only screen and (min-width: 1418px) {
   .recommend {
