--- a/themes/hexo-theme-matery/layout/about.ejs
+++ b/themes/hexo-theme-matery/layout/about.ejs
@@ -43,7 +43,7 @@
 
                 <div class="introduction center-align" data-aos="fade-up"><%= theme.profile.introduction %></div>
 
-                <%- partial('_widget/post-charts') %>
+                <%# partial('_widget/post-charts') %>
 
                 <% if (theme.myProjects && theme.myProjects.enable) { %>
                 <%- partial('_widget/my-projects') %>
