--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -1507,7 +1507,7 @@ footer .copy-right {
 /* create the ... style */
 .block-with-text:before {
   /* points in the end */
-  content: '...';
+  /*content: '...';*/
   /* absolute position */
   position: absolute;
   /* set position to right bottom corner of block */
