添加插件 样式修改

--- a/themes/hexo-theme-matery/layout/_partial/post-detail.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/post-detail.ejs
@@ -73,7 +73,7 @@
             <%- partial('_partial/reward') %>
             <% } %>
 
-            <%- partial('_partial/share') %>
+            <%# partial('_partial/share') %>
 
             <div class="reprint">
                 <p>
