替换首页背景图片

--- a/themes/hexo-theme-matery/layout/_partial/bg-cover-content.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/bg-cover-content.ejs
@@ -22,5 +22,9 @@
 <script>
 // 每天切换 banner 图.  Switch banner image every day.
 // $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay() + '.jpg)');
-$('.bg-cover').css('background-image', 'url(/medias/banner/7.jpg)');
+if(window.screen.width > 600) {
+    $('.bg-cover').css('background-image', 'url(/medias/banner/' + new Date().getDay() + '.jpg)')
+}else {
+    $('.bg-cover').css('background-image', 'url(/medias/banner/7.jpg)')
+}
 </script>
