--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -938,9 +938,9 @@ table tr:nth-child(2n), thead {
   background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%) !important;
 }
 .chip .tag-length {
-  margin-left: 5px;
-  margin-right: -2px;
-  font-size: 0.5rem;
+  /*margin-left: 5px;*/
+  /*margin-right: -2px;*/
+  font-size: 0.75rem;
 }
 .chip-default .tag-length {
   color: #e91e63;
